--- a/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
+++ b/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classifiedImage.cs" />
+    <Compile Include="XMLParser.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
