Dodanie pakietu OpenCV.220.x64

--- a/KlasyfikatorZdjec/KlasyfikatorZdjec/packages.config
+++ b/KlasyfikatorZdjec/KlasyfikatorZdjec/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Baseclass.Contrib.Nuget.Output" version="1.0.2" targetFramework="net45" />
   <package id="EmguCV.221.x64" version="1.5" targetFramework="net45" />
+  <package id="OpenCV.220.x64" version="1.0.2" targetFramework="net45" />
 </packages>
