--- a/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
+++ b/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="classifiedImage.cs" />
+    <Compile Include="FIlter.cs" />
     <Compile Include="XMLParser.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
