--- a/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
+++ b/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="classifiedImage.cs" />
     <Compile Include="Classifier.cs" />
+    <Compile Include="DetectFace.cs" />
     <Compile Include="FIlter.cs" />
     <Compile Include="XMLParser.cs" />
     <Compile Include="Form1.cs">
