--- a/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
+++ b/KlasyfikatorZdjec/KlasyfikatorZdjec/KlasyfikatorZdjec.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Classifier.cs" />
     <Compile Include="DetectFace.cs" />
     <Compile Include="FIlter.cs" />
+    <Compile Include="UnclassifiedImage.cs" />
     <Compile Include="XMLParser.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
